# Prog3Lernen

./: CMakeLists.txt  README.md  main.cpp
Aufgabe7/: Figure.h  Rectangle.cpp  Rectangle.h  structs.h
Countdown/: countdown.cpp  countdown.h
Fibonnacci/: fibonacci.cpp  fibonacci.h
Konstruktor/: Bruch.h
Monster/: Chimaere.cpp  Monster.cpp  Monster.h
Palindrom/: Palindrom.cpp  Palindrom.h
Palindrom/Palidrom_c/: pal_c.c  pal_c.h  test.cpp  test.h
StringCompare/: strcomp.cpp  strcomp.h
